fix genres wrap

--- a/src/components/film-item/movie.css
+++ b/src/components/film-item/movie.css
@@ -111,6 +111,7 @@
     display: flex;
     justify-content: left;
     gap: 5px;
+    flex-wrap: wrap;
 }
 .movie-сard__genre {
     box-sizing: border-box;
